--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,5 @@ typings/
 # dotenv environment variables file
 .env
 
+# Removing file that file that stores custom attributes of its containing folder
+.DS_Store
