--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
   },
   "homepage": "https://github.com/LucFII/liri#readme",
   "dependencies": {
-    "request": "^2.81.0"
+    "request": "^2.81.0",
+    "twitter": "^1.7.1",
+    "node-spotify-api": "^1.0.5"
+    
   }
 }
