--- a/package.json
+++ b/package.json
@@ -17,9 +17,9 @@
   },
   "homepage": "https://github.com/LucFII/liri#readme",
   "dependencies": {
+    "node-spotify-api": "^1.0.5",
     "request": "^2.81.0",
-    "twitter": "^1.7.1",
-    "node-spotify-api": "^1.0.5"
-    
+    "spotify-web-api-node": "^2.4.0",
+    "twitter": "^1.7.1"
   }
 }
