--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-spotify-api": "^1.0.5",
     "request": "^2.81.0",
     "spotify-web-api-node": "^2.4.0",
+    "twit": "^2.2.9",
     "twitter": "^1.7.1"
   }
 }
